<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_city"
            android:title="@string/city_name" />
        <item
            android:id="@+id/nav_monuments"
            android:icon="@drawable/ic_museum"
            android:title="@string/location_monuments" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_museum"
            android:title="@string/location_museums" />
        <item
            android:id="@+id/nav_parks"
            android:icon="@drawable/ic_park"
            android:title="@string/location_parks" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_shopping"
            android:title="@string/location_shopping" />
    </group>
</menu>